--- a/k8s/org-charts-deployment.yaml
+++ b/k8s/org-charts-deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: org-charts-deployment
+  namespace: org-charts-ns
   labels:
     component: org-charts
 spec:
@@ -11,6 +12,7 @@ spec:
       component: org-charts
   template:
     metadata:
+      namespace: org-chart-ns
       labels:
         component: org-charts
     spec:
@@ -19,4 +21,16 @@ spec:
           image: twister22/organization-charts:test
           ports:
             - containerPort: 8080
-
+          env:
+            - name: spring.datasource.url
+              value: 'jdbc:mysql://mysql-cluster-ip-service:3306/organization_charts'
+            - name: spring.datasource.username
+              value: 'twister'
+            - name: spring.datasource.password
+              value: '1653'
+            - name: spring.jpa.properties.hibernate.dialect
+              value: 'org.hibernate.dialect.MySQL5Dialect'
+            - name: spring.datasource.initialization-mode
+              value: 'always'
+            - name: spring.jpa.hibernate.ddl-auto
+              value: 'update'
