--- a/k8s/ingress-service.yaml
+++ b/k8s/ingress-service.yaml
@@ -1,15 +1,16 @@
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
+  namespace: org-charts-ns
   name: org-chart-ingress-service
   annotations:
     kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec:
   rules:
+    - host: org.charts.employee.com
     - http:
         paths:
-          - path: /rest/employees/?(.*)
+          - path: /rest/employees
             backend:
               serviceName: org-charts-cluster-ip-service
               servicePort: 8080
