--- a/k8s/org-charts-cluster-ip-service.yaml
+++ b/k8s/org-charts-cluster-ip-service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: org-charts-cluster-ip-service
+  namespace: org-charts-ns
 spec:
   type: ClusterIP
   selector:
