--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,3 @@
-# for kubernetes mysql container
-spring.datasource.url=jdbc:mysql://mysql-cluster-ip-service:3306/organization_charts
-spring.datasource.username=root
-spring.datasource.password=1994
-# for docker-compose mysql container
-# spring.datasource.url=jdbc:mysql://mysql-server:3306/organization_charts
-# spring.datasource.username=twister
-# spring.datasource.password=1653
-# for testing localhost mysql
-# spring.datasource.url=jdbc:mysql://localhost:3306/organization_charts
-# spring.datasource.username=root
-# spring.datasource.password=1653
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-#spring.datasource.initialization-mode=always
-#spring.jpa.hibernate.ddl-auto=create
+spring.datasource.platform=h2
+spring.datasource.url=jdbc:h2:mem:organization_charts
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
