--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,6 +1,7 @@
 FROM openjdk:8-jre-alpine
 
-ADD target/api.jar /app/api.jar
-EXPOSE 8080
+WORKDIR /app
+
+ADD target/api.jar ./api.jar
 
 ENTRYPOINT ["java", "-jar", "/app/api.jar"]
